Converted solution to VS2010 format and added a property sheet with optimization flags.

--- a/.hgignore
+++ b/.hgignore
@@ -2,3 +2,7 @@ syntax: regexp
 Debug/*
 Release/*
 ipch/*
+syntax: glob
+Boolean Function Minimizer.opensdf
+Boolean Function Minimizer.sdf
+Boolean Function Minimizer.suo
